--- a/index.html
+++ b/index.html
@@ -18,8 +18,7 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&Architects+Daughter&
-      family=Original+Surfer&family=Caveat&family=Parisienne&family=Yellowtail&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Caveat:wght@400;500;600;700&family=Indie+Flower&family=Original+Surfer&family=Pacifico&display=swap"
       rel="stylesheet"
     />
 
@@ -63,7 +62,12 @@
       <!--Navbar-->
       <section id="main-nav">
         <nav
-          class="navbar navbar-expand-md d-flex align-items-center justify-content-center"
+          class="
+            navbar navbar-expand-md
+            d-flex
+            align-items-center
+            justify-content-center
+          "
         >
           <div class="row"></div>
           <div class="container-fluid">
@@ -324,7 +328,9 @@
             data-bs-slide="prev"
           >
             <span
-              class="carousel-control-prev-icon carousel-control-prev-icon-colored"
+              class="
+                carousel-control-prev-icon carousel-control-prev-icon-colored
+              "
               aria-hidden="true"
             ></span>
             <span class="visually-hidden">Previous</span>
@@ -336,7 +342,9 @@
             data-bs-slide="next"
           >
             <span
-              class="carousel-control-next-icon carousel-control-next-icon-colored"
+              class="
+                carousel-control-next-icon carousel-control-next-icon-colored
+              "
               aria-hidden="true"
             ></span>
             <span class="visually-hidden">Next</span>
