--- a/elerhetosegek.html
+++ b/elerhetosegek.html
@@ -18,8 +18,7 @@
     <!--Google Fonts-->
     <link rel="preconnect" href="https://fonts.gstatic.com" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Pacifico&Architects+Daughter&
-      family=Original+Surfer&family=Caveat&family=Parisienne&family=Yellowtail&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Architects+Daughter&family=Caveat:wght@400;500;600;700&family=Original+Surfer&family=Pacifico&family=Sacramento&display=swap"
       rel="stylesheet"
     />
 
